--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
       </div>
     </div>
   </header>
+  <div class="banner">
+    <h1>Created by @dalissongabriel</h1>
+    <p>Feel free to share and collaborate!</p>
+  </div>
 </body>
 </html>
