--- a/index.html
+++ b/index.html
@@ -29,5 +29,31 @@
     <h1>Created by @dalissongabriel</h1>
     <p>Feel free to share and collaborate!</p>
   </div>
+  <div class="bar">
+    <div class="content">
+      <ul>
+        <li class="active">
+          <span>Tweets</span>
+          <strong>1234</strong>
+        </li>
+        <li>
+          <span>Following</span>
+          <strong>4321</strong>
+        </li>
+        <li>
+          <span>Followers</span>
+          <strong>1342</strong>
+        </li>
+        <li>
+          <span>Favorites</span>
+          <strong>3252</strong>
+        </li>
+      </ul>
+      <div class="actions">
+        <button>Follow</button>
+        <img src="./images/more.svg" alt="More">
+      </div>
+    </div>
+  </div>
 </body>
 </html>
