added: profile aside

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <img src="./images/logo.svg" alt="Logo Twitter">
       <div class="side">
         <input type="text" placeholder="Search on twitter">
-        <img src="./images/avatar.png" alt="Foto de perfil">
+        <img src="./images/avatar.jpeg" alt="Foto de perfil">
         <button>Tweet</button>
       </div>
     </div>
@@ -55,6 +55,61 @@
         <img src="./images/more.svg" alt="More">
       </div>
     </div>
+  </div>
+  <div class="wrapper-content content">
+    <aside class="profile">
+      <img class="avatar" src="/images/avatar.jpeg" alt="Gojo Satoru">
+      <h1>Gojo Satoru</h1>
+      <span>@sorcerer_jujutsu_strongest</span>
+      <p>All I'm feeling right now is the joy of this world.</p>
+      <ul class="list">
+        <li>
+          <img src="./images/place.svg" alt="Place">
+          Tokyo, Japan
+        </li>
+        <li>
+          <img src="./images/url.svg" alt="Url">
+          <a href="https://jujutsu-kaisen.fandom.com/wiki/Satoru_Gojo">gojo.wiki</a>
+        </li>
+        <li>
+          <img src="./images/joined.svg" alt="Joined">
+          Joined June 2009
+        </li>
+        <li>
+          <img src="./images/born.svg" alt="Born">
+          Born the 7th of December 1989
+        </li>
+      </ul>
+
+      <div class="widget followers">
+        <strong><img src="images/followers.svg" alt="Followers">2659 followers that you know</strong>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+      <div class="widget images">
+        <strong><img src="images/images.svg" alt="Images">276 Photos and videos</strong>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </aside>
+    <section class="timeline">Timeline</section>
+    <profile class="widgets">Widgets</profile>
   </div>
 </body>
 </html>
