--- a/index.html
+++ b/index.html
@@ -1,115 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="images/favicon.png">
-  <title>Twitter</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <header id="main-header">
-    <div class="content">
-      <nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="images/favicon.png" />
+    <title>Twitter</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <header id="main-header">
+      <div class="content">
+        <nav>
+          <ul>
+            <li><img src="./images/home.svg" alt="Home" />Home</li>
+            <li>
+              <img
+                src="./images/notification.svg"
+                alt="Notifications"
+              />Notifications
+            </li>
+            <li><img src="./images/message.svg" alt="Messages" />Messages</li>
+          </ul>
+        </nav>
+        <img src="./images/logo.svg" alt="Logo Twitter" />
+        <div class="side">
+          <input type="text" placeholder="Search on twitter" />
+          <img src="./images/avatar.jpeg" alt="Foto de perfil" />
+          <button>Tweet</button>
+        </div>
+      </div>
+    </header>
+    <div class="banner">
+      <h1>Created by @dalissongabriel</h1>
+      <p>Feel free to share and collaborate!</p>
+    </div>
+    <div class="bar">
+      <div class="content">
         <ul>
-          <li><img src="./images/home.svg" alt="Home">Home</li>
-          <li><img src="./images/notification.svg" alt="Notifications">Notifications</li>
-          <li><img src="./images/message.svg" alt="Messages">Messages</li>
+          <li class="active">
+            <span>Tweets</span>
+            <strong>1234</strong>
+          </li>
+          <li>
+            <span>Following</span>
+            <strong>4321</strong>
+          </li>
+          <li>
+            <span>Followers</span>
+            <strong>1342</strong>
+          </li>
+          <li>
+            <span>Favorites</span>
+            <strong>3252</strong>
+          </li>
         </ul>
-      </nav>
-      <img src="./images/logo.svg" alt="Logo Twitter">
-      <div class="side">
-        <input type="text" placeholder="Search on twitter">
-        <img src="./images/avatar.jpeg" alt="Foto de perfil">
-        <button>Tweet</button>
+        <div class="actions">
+          <button>Follow</button>
+          <img src="./images/more.svg" alt="More" />
+        </div>
       </div>
     </div>
-  </header>
-  <div class="banner">
-    <h1>Created by @dalissongabriel</h1>
-    <p>Feel free to share and collaborate!</p>
-  </div>
-  <div class="bar">
-    <div class="content">
-      <ul>
-        <li class="active">
-          <span>Tweets</span>
-          <strong>1234</strong>
-        </li>
-        <li>
-          <span>Following</span>
-          <strong>4321</strong>
-        </li>
-        <li>
-          <span>Followers</span>
-          <strong>1342</strong>
-        </li>
-        <li>
-          <span>Favorites</span>
-          <strong>3252</strong>
-        </li>
-      </ul>
-      <div class="actions">
-        <button>Follow</button>
-        <img src="./images/more.svg" alt="More">
-      </div>
-    </div>
-  </div>
-  <div class="wrapper-content content">
-    <aside class="profile">
-      <img class="avatar" src="/images/avatar.jpeg" alt="Gojo Satoru">
-      <h1>Gojo Satoru</h1>
-      <span>@sorcerer_jujutsu_strongest</span>
-      <p>All I'm feeling right now is the joy of this world.</p>
-      <ul class="list">
-        <li>
-          <img src="./images/place.svg" alt="Place">
-          Tokyo, Japan
-        </li>
-        <li>
-          <img src="./images/url.svg" alt="Url">
-          <a href="https://jujutsu-kaisen.fandom.com/wiki/Satoru_Gojo">gojo.wiki</a>
-        </li>
-        <li>
-          <img src="./images/joined.svg" alt="Joined">
-          Joined June 2009
-        </li>
-        <li>
-          <img src="./images/born.svg" alt="Born">
-          Born the 7th of December 1989
-        </li>
-      </ul>
+    <div class="wrapper-content content">
+      <aside class="profile">
+        <img class="avatar" src="/images/avatar.jpeg" alt="Gojo Satoru" />
+        <h1>Gojo Satoru</h1>
+        <span>@sorcerer_jujutsu_strongest</span>
+        <p>All I'm feeling right now is the joy of this world.</p>
+        <ul class="list">
+          <li>
+            <img src="./images/place.svg" alt="Place" />
+            Tokyo, Japan
+          </li>
+          <li>
+            <img src="./images/url.svg" alt="Url" />
+            <a href="https://jujutsu-kaisen.fandom.com/wiki/Satoru_Gojo"
+              >gojo.wiki</a
+            >
+          </li>
+          <li>
+            <img src="./images/joined.svg" alt="Joined" />
+            Joined June 2009
+          </li>
+          <li>
+            <img src="./images/born.svg" alt="Born" />
+            Born the 7th of December 1989
+          </li>
+        </ul>
 
-      <div class="widget followers">
-        <strong><img src="images/followers.svg" alt="Followers">2659 followers that you know</strong>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
-      <div class="widget images">
-        <strong><img src="images/images.svg" alt="Images">276 Photos and videos</strong>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
-    </aside>
-    <section class="timeline">Timeline</section>
-    <profile class="widgets">Widgets</profile>
-  </div>
-</body>
+        <div class="widget followers">
+          <strong
+            ><img src="images/followers.svg" alt="Followers" />2659 followers
+            that you know</strong
+          >
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="widget images">
+          <strong
+            ><img src="images/images.svg" alt="Images" />276 Photos and
+            videos</strong
+          >
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </aside>
+      <section class="timeline">Timeline</section>
+      <aside class="widgets">
+        <div class="widget follow">
+          <div class="title">
+            <strong>Who to follow</strong>
+            <a href="#">Refresh</a>
+            <a href="#">View all</a>
+          </div>
+
+          <ul>
+            <li>
+              <div class="profile">
+                <img src="/images/profiles/itadori-profile.jpeg" alt="Itadori Yugi avatar profile" />
+                <div class="info">
+                  <strong>Itadori <span>@sukuna_eater</span></strong>
+                  <button>Follow</button>
+                </div>
+              </div>
+              <a href="#">x</a>
+            </li>
+            <li>
+              <div class="profile">
+                <img src="/images/profiles/kugisaki-profile.jpeg" alt="kugisaki avatar profile" />
+                <div class="info">
+                  <strong>Kugisaki <span>@kugisaki_nob</span></strong>
+                  <button>Follow</button>
+                </div>
+              </div>
+              <a href="#">x</a>
+            </li>
+            <li>
+              <div class="profile">
+                <img src="/images/profiles/megumi-profile.jpeg" alt="Megumi avatar profile" />
+                <div class="info">
+                  <strong>Fushiguro <span>@m_fushiguro</span></strong>
+                  <button>Follow</button>
+                </div>
+              </div>
+              <a href="#">x</a>
+            </li>
+          </ul>
+        </div>
+        <div class="trends"></div>
+      </aside>
+    </div>
+  </body>
 </html>
