--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
           </li>
           <li>
             <img src="./images/url.svg" alt="Url" />
-            <a href="https://jujutsu-kaisen.fandom.com/wiki/Satoru_Gojo"
-              >gojo.wiki</a
-            >
+            <a href="https://jujutsu-kaisen.fandom.com/wiki/Satoru_Gojo">gojo.wiki</a>
           </li>
           <li>
             <img src="./images/joined.svg" alt="Joined" />
@@ -89,10 +87,10 @@
         </ul>
 
         <div class="widget followers">
-          <strong
-            ><img src="images/followers.svg" alt="Followers" />2659 followers
-            that you know</strong
-          >
+          <strong>
+            <img src="/images/followers.svg" alt="Followers" />2659 followers
+            that you know
+          </strong>
           <ul>
             <li></li>
             <li></li>
@@ -107,10 +105,10 @@
           </ul>
         </div>
         <div class="widget images">
-          <strong
-            ><img src="images/images.svg" alt="Images" />276 Photos and
-            videos</strong
-          >
+          <strong>
+            <img src="/images/images.svg" alt="Images" />
+            276 Photos and videos
+          </strong>
           <ul>
             <li></li>
             <li></li>
@@ -121,7 +119,27 @@
           </ul>
         </div>
       </aside>
-      <section class="timeline">Timeline</section>
+      <section class="timeline">
+          <nav>
+            <a href="#" class="active">Tweets</a>
+            <a href="#">Tweets and replies</a>
+            <a href="#">Medias</a>
+          </nav>
+          <ul class="tweets">
+            <li>
+              <img src="/images/profiles/itadori-profile.jpeg" alt="Itadori avatar profile">
+              <div class="info">
+                <strong>Itadori <span>@sukuna_eater</span></strong>
+                <p>The cursed objects mentioned in Jujutsu Kaisen will be presented in the form of 12 pages full-color picture book in JUMP GIGA Autumn 2021 Issue Which will be released on 21 October 2021.</p>
+                <div class="actions">
+                  <a href="#"><img src="/images/comments.svg" alt="Comments">3</a>
+                  <a href="#"><img src="/images/retweet.svg" alt="Retweets">1</a>
+                  <a href="#"><img src="/images/like.svg" alt="Likes">5</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+      </section>
       <aside class="widgets">
         <div class="widget follow">
           <div class="title">
