add: media querys to responsive layout

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
         <img src="./images/logo.svg" alt="Logo Twitter" />
         <div class="side">
-          <input type="text" placeholder="Search on twitter" />
+          <input type="search" placeholder="Search on twitter" />
           <img src="./images/avatar.jpeg" alt="Foto de perfil" />
           <button>Tweet</button>
         </div>
