Abreviando Jujutsu Kaisen

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <img src="/images/profiles/itadori-profile.jpeg" alt="Itadori avatar profile">
               <div class="info">
                 <strong>Itadori <span>@sukuna_eater</span></strong>
-                <p>The cursed objects mentioned in Jujutsu Kaisen will be presented in the form of 12 pages full-color picture book in JUMP GIGA Autumn 2021 Issue Which will be released on 21 October 2021.</p>
+                <p>The cursed objects mentioned in JK will be presented in the form of 12 pages full-color picture book in JUMP GIGA Autumn 2021 Issue Which will be released on 21 October 2021.</p>
                 <div class="actions">
                   <a href="#"><img src="/images/comments.svg" alt="Comments">3</a>
                   <a href="#"><img src="/images/retweet.svg" alt="Retweets">1</a>
